# MerkleForge

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
merkle-bench/: Cargo.toml
merkle-bench/benches/: baseline_construction.rs  hash_throughput.rs
merkle-bench/src/: lib.rs
merkle-core/src/: error.rs  lib.rs
merkle-core/src/traits/: hash_function.rs  merkle_tree.rs  mod.rs  serializable.rs
merkle-core/src/types/: common.rs
merkle-hash/: Cargo.toml  README.md
merkle-hash/src/: blake3.rs  keccak256.rs  lib.rs  sha256.rs
