[workspace]
resolver = "2"
members = [
    "merkle-core",
    "merkle-hash",
    "merkle-bench",
]

[workspace.package]
version     = "0.1.0"
edition     = "2024"
authors     = ["Blessing Samuel <dicethedev>"]
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/dicethedev/MerkleForge"
keywords    = ["merkle", "merkle-root", "merkleRoot", "blockchain", "cryptography", "hashing"]
categories  = ["cryptography", "data-structures"]

# Shared dependency versions — bump once, applies everywhere
[workspace.dependencies]
# Hashing
sha2       = { version = "0.10", default-features = false }
tiny-keccak = { version = "2.0", features = ["keccak"] }
blake3     = { version = "1.5", default-features = false }

# Serialisation
serde      = { version = "1.0", features = ["derive"] }
bincode    = "1.3"

# Testing / benchmarking
criterion  = { version = "0.5", features = ["html_reports"] }
proptest   = "1.4"

# Shared internal crates
merkle-core = { path = "merkle-core" }
merkle-hash = { path = "merkle-hash" }